--- a/inscripts-react-assignment/package.json
+++ b/inscripts-react-assignment/package.json
@@ -17,12 +17,16 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-table": "^7.8.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/node": "^24.0.10",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-table": "^7.7.20",
+    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.5.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
