--- a/inscripts-react-assignment/package.json
+++ b/inscripts-react-assignment/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-table": "^7.8.0",
+    "react-table-sticky": "^1.1.3",
     "react-toastify": "^11.0.5",
     "styled-components": "^6.1.19"
   },
